# stock

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Findcurl.cmake  Findsqlite3.cmake
inc/: routefunctions.h  stockdbhelper.h  utility.h
src/: routefunctions.cpp  stockdbhelper.cpp  utility.cpp
src/GetTWStockDataFromDB/: CMakeLists.txt  main.cpp
src/SaveTWStockDataToDB/: CMakeLists.txt  main.cpp
src/frontend/: package.json
src/frontend/src/app/: page.js
src/frontend/src/app/table/: page.js
